# lockedenv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md
examples/: microservice.rs  simple.rs
src/: dotenv.rs  error.rs  lib.rs  lock.rs  parse.rs  watcher.rs
tests/: basic.rs  dotenv_feature.rs  drift.rs  env_struct.rs  types.rs
